--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/recipes">recipes</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/recipes">See all recipes</a></li>
+    <li><a href="#/ingredients">See all ingredients</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -37,7 +37,7 @@
   <script src="bower_components/restangular/dist/restangular.js"></script>
   <script src="app.js"></script>
   <script src="recipes/recipes.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="ingredients/ingredients.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
