Ability to add new recipe. No ingredients yet.

--- a/app/recipes/recipes.html
+++ b/app/recipes/recipes.html
@@ -2,3 +2,4 @@
     <li ng-repeat="recipe in recipes">{{ recipe.name }}: {{ recipe.directions }}</li>
 </ul>
 
+<a href="#/add-recipe">Add a New Recipe</a>
