--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,9 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/recipes">See all recipes</a></li>
-    <li><a href="#/ingredients">See all ingredients</a></li>
+    <li><a href="#/recipes">See All Recipes</a></li>
+    <li><a href="#/ingredients">See All Ingredients</a></li>
+    <li><a href="#/add-recipe">Add a New Recipe</a></li>
   </ul>
 
   <!--[if lt IE 7]>
