--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
   <script src="app.js"></script>
   <script src="recipes/recipes.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="add-recipe/add-recipe.js"></script>
+  <script src="recipe-detail/recipe-detail.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
