--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <ul class="menu">
     <li><a href="#/recipes">See All Recipes</a></li>
     <li><a href="#/ingredients">See All Ingredients</a></li>
-    <li><a href="#/add-recipe">Add a New Recipe</a></li>
+    <li><a href="#/add-recipe">Add a Recipe</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -26,8 +26,6 @@
   <![endif]-->
 
   <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
