--- a/app/add-recipe/add-recipe.html
+++ b/app/add-recipe/add-recipe.html
@@ -1,49 +1,76 @@
-<label>Recipe Name
-    <br>
-    <input ng-model="recipe.name">
-</label>
-<br>
-<br>
 
-<label>Recipe Description
-    <br>
-    <textarea ng-model="recipe.description"></textarea>
-</label>
-<br>
-<br>
 
-<label>Recipe Directions
-    <br>
-    <textarea ng-model="recipe.directions"></textarea>
-</label>
-<br>
-<br>
 
-<label>Ingredients
-    <br>
-    <input ng-model="ingredientName">
-</label>
-<br>
-<button ng-click="addIngredientToRecipe(ingredientName)">Add ingredient to recipe</button>
-<br>
 
-<p>Your ingredients:</p>
-<ol>
-    <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</li>
-</ol>
+<div class="container-fluid">
 
-<label>Tags
-    <br>
-    <input ng-model="tagName">
-</label>
-<br>
-<button ng-click="addTagToRecipe(tagName)">Add tag to recipe</button>
-<br>
 
-<p>Your tags:</p>
-<ol>
-    <li ng-repeat="tag in recipe.tags">{{ tag.name }}</li>
-</ol>
-<br>
+    <div class="col-lg-2">
+        <label class="add-recipe-labels">Recipe Name
+            <br>
+            <input ng-model="recipe.name">
+        </label>
+    </div>
 
-<button ng-click="addRecipe()">Save New Recipe</button>
+
+    <div class="col-lg-2">
+        <label class="add-recipe-labels">Recipe Description
+        <br>
+        <textarea ng-model="recipe.description"></textarea>
+        </label>
+    </div>
+
+
+    <div class="col-lg-2">
+        <label class="add-recipe-labels">Recipe Directions
+        <br>
+        <textarea ng-model="recipe.directions"></textarea>
+        </label>
+    </div>
+
+
+    <div class="col-lg-2">
+        <label>
+            <form ng-submit="addIngredientToRecipe(ingredientName)">
+            <div class="add-recipe-labels">Ingredients
+            <br>
+            </div>
+            <input ng-model="ingredientName">
+        <br>
+        <input type ="submit" value="Add to Recipe" class="button"/>
+            </form>
+        </label>
+        <p>Your ingredients:</p>
+    <ul class="shadow">
+        <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</li>
+    </ul>
+    </div>
+
+
+    <div class="col-lg-2">
+        <label>
+            <form ng-submit="addTagToRecipe(tagName)">
+            <div class="add-recipe-labels">Tags
+            <br>
+            </div>
+            <input ng-model="tagName">
+            <br>
+            <input type ="submit" value="Add to Tags" class="button"/>
+                </form>
+        </label>
+
+        <p>Your tags:</p>
+        <ul>
+            <li ng-repeat="tag in recipe.tags">{{ tag.name }}</li>
+        </ul>
+    </div>
+
+
+    </div>
+    <div class="container">
+        <div class="add-recipe-labels">
+        <div class="col-lg-12">
+        <button ng-click="addRecipe()">Save New Recipe</button>
+        </div>
+        </div>
+</div>
