--- a/app/index.html
+++ b/app/index.html
@@ -16,17 +16,30 @@
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/recipes">See All Recipes</a></li>
-    <li><a href="#/ingredients">See All Ingredients</a></li>
-    <li><a href="#/add-recipe">Add a Recipe</a></li>
-  </ul>
+    <div class="container-fluid">
+        <ul>
+            <div class="col-lg-4">
+                <div class="splashpage">
+                    <img src="img/apple.jpg" alt="">
+                    </div>
+        <li><a href="#/recipes">Recipes</a></li></div>
+            <div class="col-lg-4">
+                                <div class="splashpage">
+                    <img src="img/blueberry.jpg" alt="">
+                    </div>
+        <li><a href="#/ingredients">Ingredients</a></li></div>
+            <div class="col-lg-4">
+        <li><a href="#/add-recipe"><img src="img/cuttingboard.jpg"></a></li></div>
+
+      </ul>
+    </div>
+    <ng-view></ng-view>
 
 <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-<div ng-view></div>
+
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
