--- a/app/splash/splash.html
+++ b/app/splash/splash.html
@@ -1,17 +1,25 @@
-    <div class="container-fluid">
-        <ul>
-            <div class="col-lg-4">
-                <div class="splashpage">
-                    <img src="img/apple.jpg" alt="">
-                    </div>
-        <li><a href="#/recipes">Recipes</a></li></div>
-            <div class="col-lg-4">
-                                <div class="splashpage">
-                    <img src="img/blueberry.jpg" alt="">
-                    </div>
-        <li><a href="#/ingredients">Ingredients</a></li></div>
-            <div class="col-lg-4">
-        <li><a href="#/add-recipe"><img src="img/cuttingboard.jpg"></a></li></div>
 
-      </ul>
-    </div>
+<section class="section" id="head">
+	<div class="container">
+
+		<div class="row">
+			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
+
+				<!-- Site Title, your name, HELLO msg, etc. -->
+				<h1 class="title">Welcome to your meal</h1>
+				<h2 class="subtitle">Create, Organize, Find</h2>
+
+				<!-- Short introductory (optional) -->
+				<h3 class="tagline">
+					The best place for your flavors.<br>
+					Share them with us.
+				</h3>
+
+				<!-- Nice place to describe your site in a sentence or two -->
+				<p><a href="#/add-recipe" class="btn btn-default btn-lg">Add a Recipe now</a></p>
+
+			</div> <!-- /col -->
+		</div> <!-- /row -->
+
+	</div>
+</section>
