Added a new background, changed buttons, video, cards

--- a/app/add-recipe/add-recipe.html
+++ b/app/add-recipe/add-recipe.html
@@ -1,12 +1,14 @@
 
 <div class="container-fluid">
-    <div>
-        <label class="add-recipe-labels">Recipe Name
-            <br>
-            <input ng-model="recipe.name" placeholder="Name">
-        </label>
-    </div>
 
+{#HTML box #}
+    <div class="box skydive col-lg-10">
+    <div class="content">
+        <p class="number">#1</p>
+        <p class="boxtitle">Sky Dive</p>
+
+    </div>
+    </div>
 
 
     <div>
