--- a/app/recipes/recipes.html
+++ b/app/recipes/recipes.html
@@ -1,6 +1,20 @@
+<input ng-model="num" ng-change="setNum()"/>
+{{num}}
+
+<div class="recipe-card col-md-4">
+    <h1>{{ recipe.name }}</h1>
+
+    <p>{{ recipe.description }}</p>
+    <p>{{ recipe.directions }}</p>
+
+    <img class="img-responsive" src="{{ recipe.photo }}">
+
+    <button class="btn btn-danger" ng-click="deleteRecipe()"><span class="glyphicon glyphicon-trash"></span>Delete Recipe</button>
+</div>
 
 <ul>
     <li ng-repeat="recipe in recipes">{{ recipe.name }}
+        <img src="{{ recipe.photo }}" alt=""/>
         <ol>
             <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</li>
         </ol>
