--- a/app/add-recipe/add-recipe.html
+++ b/app/add-recipe/add-recipe.html
@@ -1,72 +1,80 @@
-
 <div class="container-fluid">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default add-recipe">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <div>
+                        <label>Name
+                            <br>
+                            <input id="recipe-name" ng-model="recipe.name" placeholder="Title of Recipe"/>
+                        </label>
+                    </div>
 
-{#HTML box #}
-    <div class="box skydive col-lg-10">
-    <div class="content">
-        <p class="number">#1</p>
-        <p class="boxtitle">Sky Dive</p>
+                    <div>
+                        <label>
+                            <form ng-submit="addTagToRecipe(tagName)">
+                                <div>Tags
+                                    <br>
+                                </div>
+                                <input ng-model="tagName">
+                                <br>
+                                <input type="submit" value="Add to Tags" class="btn btn-default"/>
+                            </form>
+                        </label>
 
-    </div>
-    </div>
+                        <p>Your tags:</p>
+                        <ul>
+                            <li ng-repeat="tag in recipe.tags">{{ tag.name }}</li>
+                        </ul>
+                    </div>
 
-
-    <div>
-        <label class="add-recipe-labels">Recipe Description
-        <br>
-        <textarea ng-model="recipe.description" placeholder="Description"></textarea>
-        </label>
-    </div>
-
-
-    <div>
-        <label class="add-recipe-labels">Recipe Directions
-        <br>
-        <textarea ng-model="recipe.directions" placeholder="Directions"></textarea>
-        </label>
-    </div>
-
-
-    <div>
-        <label>
-            <form ng-submit="addIngredientToRecipe(ingredientName)" ng-keypress="13">
-            <div class="add-recipe-labels">Ingredients
-            <br>
+                </h3>
             </div>
-            <input ng-model="ingredientName" placeholder="Tomatoes, Oregano, etc.">
-        <br>
-        <input type ="submit" value="Add to Recipe" class="btn btn-default"/>
-            </form>
-        </label>
-        <p>Your ingredients:</p>
-    <ul class="shadow">
-        <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</li>
-    </ul>
-    </div>
+            <div class="panel-body">
+
+                <div>
+                    <label>Recipe Description
+                        <br>
+                        <textarea ng-model="recipe.description" placeholder="Description"></textarea>
+                    </label>
+                </div>
 
 
-    <div>
-        <label>
-            <form ng-submit="addTagToRecipe(tagName)">
-            <div>Tags
-            <br>
+                <div>
+                    <label>Recipe Directions
+                        <br>
+                        <textarea ng-model="recipe.directions" placeholder="Directions"></textarea>
+                    </label>
+                </div>
+
+
+                <div>
+                    <label>
+                        <form ng-submit="addIngredientToRecipe(ingredientName)" ng-keypress="13">
+                            <div class="add-recipe-labels">Ingredients
+                                <br>
+                            </div>
+                            <input ng-model="ingredientName" placeholder="Tomatoes, Oregano, etc.">
+                            <br>
+                            <input type="submit" value="Add to Recipe" class="btn btn-default"/>
+                        </form>
+                    </label>
+
+                    <p>Your ingredients:</p>
+                    <ul class="shadow">
+                        <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</li>
+                    </ul>
+                </div>
+
+
             </div>
-            <input ng-model="tagName">
-            <br>
-            <input type ="submit" value="Add to Tags" class="btn btn-default"/>
-            </form>
-        </label>
-        <p>Your tags:</p>
-        <ul>
-            <li ng-repeat="tag in recipe.tags">{{ tag.name }}</li>
-        </ul>
-    </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <button ng-click="addRecipe()" class="btn btn-default">Save New Recipe</button>
+                </div>
 
-
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-        <button ng-click="addRecipe()" class="btn btn-default">Save New Recipe</button>
+            </div>
         </div>
-
+    </div>
+</div>
 </div>
