--- a/app/index.html
+++ b/app/index.html
@@ -136,7 +136,7 @@
 </section>
 
 
-    <ng-view></ng-view>
+<div ng-view></div>
 
 <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
