--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 	<link rel="shortcut icon" href="images/knife.png">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body class="theme-invert">
 <nav class="mainmenu">
