--- a/app/recipes/recipes.html
+++ b/app/recipes/recipes.html
@@ -1,24 +1,32 @@
-<input ng-model="num" ng-change="setNum()"/>
-{{num}}
-
-<div class="recipe-card col-md-4">
-    <h1>{{ recipe.name }}</h1>
-
-    <p>{{ recipe.description }}</p>
-    <p>{{ recipe.directions }}</p>
-
-    <img class="img-responsive" src="{{ recipe.photo }}">
-
-    <button class="btn btn-danger" ng-click="deleteRecipe()"><span class="glyphicon glyphicon-trash"></span>Delete Recipe</button>
-</div>
-
-<ul>
-    <li ng-repeat="recipe in recipes">{{ recipe.name }}
-        <img src="{{ recipe.photo }}" alt=""/>
-        <ol>
-            <li ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</li>
-        </ol>
-    </li>
-</ul>
-
 <a href="#/add-recipe">Add a New recipe</a>
+
+<div ng-repeat="recipe in recipes">
+    <div class="container-fluid">
+        <div class="col-md-4 col-md-offset-4">
+           <a href="#/recipes/{{ recipe.id }}">
+               <div class="panel panel-default add-recipe cards">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        <div>
+                            {{ recipe.name }}
+                        </div>
+
+                        <div>
+                            <p>{{ recipe.tag }}</p>
+                        </div>
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <div>
+                        <p>{{ recipe.description }}</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-danger" ng-click="deleteRecipe()"><span
+                                class="glyphicon glyphicon-trash"></span>Delete Recipe
+                        </button>
+                    </div>
+                </div>
+            </div></a>
+        </div>
+    </div>
+</div>
