--- a/app/index.html
+++ b/app/index.html
@@ -23,16 +23,15 @@
 <body class="theme-invert">
 <nav class="mainmenu">
 	<div class="container">
-		<div class="dropdown">
-			<button type="button" class="navbar-toggle white-navbar" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
-			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Hello</a></li>
-				<li><a href="#add-recipe">Add Recipe</a></li>
-				<li><a href="#/ingredients">Ingredients</a></li>
-				<li><a href="#/recipes">Recipes</a></li>
-			</ul>
-		</div>
+		   <div class="dropdown">
+        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Dropdown <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+        </ul>
+    </div>
 	</div>
 </nav>
 
