--- a/app/add-recipe/add-recipe.html
+++ b/app/add-recipe/add-recipe.html
@@ -1,3 +1,4 @@
+
 <div class="container-fluid">
     <div class="col-xs-4 col-xs-offset-4">
         <div class="panel panel-default add-recipe cards">
@@ -30,7 +31,7 @@
                 <div class="form-group">
 
                     <div class="row">
-                        <textarea class="full-width-textarea" ng-model="recipe.description"
+                        <textarea class="full-width-textarea move-right" ng-model="recipe.description"
                                   placeholder="Description"></textarea>
                     </div>
 
@@ -48,8 +49,8 @@
                             </ul>
                         </label>
                         <label class="col-lg-6">
-                            <textarea class="full-width-textarea expandingArea" ng-model="recipe.directions"
-                                      placeholder="Directions"></textarea>
+                                <textarea class="full-width-textarea expandingArea" ng-model="recipe.directions"
+                                          placeholder="Directions"></textarea>
                         </label>
 
                     </div>
