--- a/app/recipe-detail/recipe-detail.html
+++ b/app/recipe-detail/recipe-detail.html
@@ -24,7 +24,7 @@
 
                     <div class="row">
                         <label class="col-lg-6">
-                            <p>{{ recipe.ingredients }}</p>
+                            <p ng-repeat="ingredient in recipe.ingredients">{{ ingredient.name }}</p>
                         </label>
                         <label class="col-lg-6">
                             <p>{{ recipe.directions }}</p>
@@ -39,8 +39,10 @@
             </div>
 
             <p>
-                <a href="#/recipes" class="btn btn-primary" ng-click="callback()">Back to recipes<a/>
-            <p class="btn btn-danger btn-xs pull-right" ng-click="deleteRecipe()">Delete Recipe</p>
+
+                <a href="#/recipes" class="btn btn-primary btn-xs pull-left" ng-click="callback()">Back to recipes<a/>
+
+                    <p class="btn btn-danger btn-xs pull-right" ng-click="deleteRecipe()">Delete Recipe</p>
             </p>
         </div>
     </div>
