--- a/app/recipes/recipes.html
+++ b/app/recipes/recipes.html
@@ -1,29 +1,39 @@
-<a href="#/add-recipe">Add a New recipe</a>
-Search: <input ng-model="query">
-<div class="container-fluid ">
-    <div ng-repeat="recipe in recipes" class="col-md-3">
+<br>
+<br>
+<br>
+<br>
+<br>
+<div>
+<input ng-model="query" class="xsearch col-xs-offset-5" placeholder="Search">
+</div>
+<div class="container-fluid">
+    <div ng-repeat="recipe in recipes | filter: query" class="col-md-3">
         <div>
-           <a href="#/recipes/{{ recipe.id }}">
-               <div class="panel panel-default add-recipe cards">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        <div>
-                            {{ recipe.name }}
-                        </div>
+            <a href="#/recipes/{{ recipe.id }}">
+                <div class="panel panel-default add-recipe cards">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <div>
+                                {{ recipe.name }}
+                            </div>
 
 
-                        <div>
-                            <p>{{ recipe.tag }}</p>
-                        </div>
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    <div>
-                        <p>{{ recipe.description }}</p>
+                            <div>
+                                <p>{{ recipe.tag }}</p>
+                            </div>
+                        </h3>
                     </div>
+                    <div class="panel-body">
+                        <div>
+                            <img class="recipeimg" src="{{recipe.photo}}">
+                        </div>
+                        <div>
+                            <p>{{ recipe.description }}</p>
+                        </div>
 
+                    </div>
                 </div>
-            </div></a>
+            </a>
         </div>
     </div>
 </div>
