--- a/app/splash/splash.html
+++ b/app/splash/splash.html
@@ -6,7 +6,7 @@
 			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
 
 				<!-- Site Title, your name, HELLO msg, etc. -->
-				<h1 class="title">Welcome to your meal...</h1>
+				<h1 class="title">Welcome</h1>
 				<h2 class="subtitle">Create, Organize, Find</h2>
 
 				<!-- Short introductory (optional) -->
