a few minor changes

--- a/app/splash/splash.html
+++ b/app/splash/splash.html
@@ -1,28 +1,18 @@
 
 <section class="section" id="head">
 	<div class="container">
-
 		<div class="row">
 			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
-
-				<!-- Site Title, your name, HELLO msg, etc. -->
 				<h1 class="title">Welcome</h1>
 				<h2 class="subtitle">Create, Organize, Find</h2>
-
-				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
 					The best place for your flavors.<br>
 					Share them with us.
 				</h3>
-
-				<!-- Nice place to describe your site in a sentence or two -->
 				<p><a href="#/add-recipe" class="btn btn-default btn-lg">Add a Recipe now</a></p>
 				<p><a href="#/recipes" class="btn btn-default btn-lg">Your Recipes</a></p>
-
-
-			</div> <!-- /col -->
-		</div> <!-- /row -->
-
+			</div>
+		</div>
 	</div>
 </section>
 
